Changed the HTML for the site.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -16,7 +16,7 @@
         <div>
             <h2><a href="">My second post</a></h2>
             <p>published: 14.06.2014, 12:14</p>
-            <p>хаха ЛОЛ тут мой второй блог хаха</p>
+            <p>хаха ЛОЛ тут мой второй блог хаха Олег лох ахахахах</p>
         </div>
     </body>
 </html>
