--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -14,6 +14,6 @@
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
         {% endfor %}
-        <p><a https://vk.com/id88575340</a></p>
+        <a href="https://vk.com/id88575340">Олег Козинов</a>
     </body>
 </html>
