--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -22,5 +22,8 @@
                 </div>
             </div>
         </div>
+        <div>
+            <a href="https://vk.com/id88575340">Олег Козинов</a>
+        </div>
     </body>
 </html>
